--- a/scss/layout/_app.scss
+++ b/scss/layout/_app.scss
@@ -33,5 +33,10 @@ input, button, textarea, select {
 
     &__footer {
         flex: 0 0 auto;
+
+        @media (max-width: 767px) {
+            position: relative;
+            overflow: hidden;
+        }
     }
 }
