--- a/scss/components/registrform/_oneRadio.scss
+++ b/scss/components/registrform/_oneRadio.scss
@@ -59,6 +59,10 @@
 
         &--nowrapp {
             white-space: nowrap;
+
+            @media (max-width: 767px) {
+                white-space: normal
+            }
         }
     }
 }
