--- a/scss/components/marketplace/_marketplace-content.scss
+++ b/scss/components/marketplace/_marketplace-content.scss
@@ -21,8 +21,10 @@
         box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.1), 0 0 2px 0 rgba(0, 0, 0, 0.1);
         background-color: #f3f3f4;
         padding: 20px;
+        margin: 0 14px 12px;
 
         .title {
+            padding: 4px 0;
             font-size: 20px;
             font-weight: bold;
             color: #000000;
@@ -43,12 +45,41 @@
                 color: #000000;
                 padding: 6px 8px;
                   border: solid 1px #231f20;
-                  border-radius: 4px;
+                  border-radius: 8px;
                   margin-bottom: 6px;
                   &:last-child{
                       margin-bottom: 0;
                   }
             }
+        }
+
+        .looking-title {
+            padding-top: 19px;
+            font-size: 16px;
+            font-weight: $bold;
+            color: #000000;
+        }
+        .looking-items {
+            display: flex;
+             margin-bottom: 14px;
+            .looking-item {
+
+            }
+        }
+        
+
+        .button {
+           
+            margin: 0 auto;
+            display: flex;
+            padding: 8px 16px;
+            border: solid 1px #231f20;
+            border-radius: 8px;
+        }
+
+        .read-more {
+            text-align: center;
+            padding-top: 8px;
         }
       }
   }
