--- a/scss/style.scss
+++ b/scss/style.scss
@@ -38,4 +38,5 @@
 @import "components/marketplace/marketplace";
 @import "components/marketplace/marketplace-content";
 @import "components/marketplace/marketplace-item";
+@import "components/marketplace/marketplace-list";
 
