--- a/scss/style.scss
+++ b/scss/style.scss
@@ -39,3 +39,16 @@
 @import "components/marketplace/marketplace-content";
 @import "components/marketplace/marketplace-item";
 
+//product baner
+@import "components/productbaner/productBaner";
+
+//tariffs
+@import "components/tariffs/tariffs";
+@import "components/tariffs/tariff";
+//testimonial
+@import "components/testimonial/testimonial";
+@import "components/testimonial/testimonialSlider";
+@import "components/testimonial/testimonialSlide";
+//companies product
+@import "components/companiesproduct/companiesProduct";
+@import "components/companiesproduct/companyInfo";
