--- a/scss/components/capitalequity/capitalequity-content.scss
+++ b/scss/components/capitalequity/capitalequity-content.scss
@@ -24,11 +24,14 @@
         border-radius: 6px;
         padding: 12px 42px;
         font-size: 16px;
-        border: none;
+        transition: 0.3s;
+        border: 1px solid transparent;
 
         &:hover {
-            color: #fff;
             text-decoration: none;
+            background-color: #fff;
+            border-color: #231f20;
+            color: #231f20;
         }
     }
 }
