--- a/scss/components/registrform/_checkboxesRow.scss
+++ b/scss/components/registrform/_checkboxesRow.scss
@@ -7,6 +7,9 @@
 
    @media (max-width: 767px) {
        display: block;
+       overflow: hidden;
+       position: relative;
+       padding: 3px 0;
       
    }
 
