--- a/scss/style.scss
+++ b/scss/style.scss
@@ -53,3 +53,7 @@
 //companies product
 @import "components/companiesproduct/companiesProduct";
 @import "components/companiesproduct/companyInfo";
+
+//modal
+@import "components/modal/requestMore";
+@import "components/modal/getReqModal";
