--- a/scss/components/marketplace/_marketplace-content.scss
+++ b/scss/components/marketplace/_marketplace-content.scss
@@ -40,6 +40,9 @@
             padding: 0;
             margin: 0;
             padding-top: 4px;
+            display: flex;
+            flex-wrap: wrap;
+            align-items: flex-start;
             .tag {
                 font-size: 12px;
                 color: #000000;
