--- a/scss/style.scss
+++ b/scss/style.scss
@@ -57,3 +57,5 @@
 //modal
 @import "components/modal/requestMore";
 @import "components/modal/getReqModal";
+//close Circle
+@import "components/closecircle/closeCircle";
