--- a/scss/components/marketplace/_marketplace-content.scss
+++ b/scss/components/marketplace/_marketplace-content.scss
@@ -6,22 +6,23 @@
     font-size: 38px;
     font-weight: $bold;
     color: #000000;
+    padding-left: 15px;
   }
 
   &__items {
       width: 100%;
       display: flex;
-      justify-content: space-around;
       flex-wrap: wrap;
       padding: 40px 0;
 
       .item {
-        width: 255px;
-        height: 386px;
+        width: 100%;
+        height: 100%;
         box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.1), 0 0 2px 0 rgba(0, 0, 0, 0.1);
         background-color: #f3f3f4;
         padding: 20px;
-        margin: 0 14px 16px;
+        display: flex;
+        flex-direction: column;
 
         .title {
             padding: 4px 0;
@@ -33,12 +34,14 @@
         .desc {
             font-size: 14px;
             color: #000000;
+            margin-bottom: 10px;
         }
 
         .tags {
             list-style: none;
             padding: 0;
             margin: 0;
+            margin-bottom: auto;
             padding-top: 4px;
             display: flex;
             flex-wrap: wrap;
@@ -46,10 +49,11 @@
             .tag {
                 font-size: 12px;
                 color: #000000;
-                padding: 6px 8px;
+                padding: 1px 8px;
                   border: solid 1px #231f20;
                   border-radius: 8px;
                   margin-bottom: 6px;
+                  margin-right: 6px;
                   &:last-child{
                       margin-bottom: 0;
                   }
@@ -64,9 +68,11 @@
         }
         .looking-items {
             display: flex;
-            margin-bottom: 14px;
+            margin-bottom: 10px;
+            flex-wrap: wrap;
             
             .looking-item {
+                margin-bottom: 4px;
                 margin-right: 28px;
                 &:last-child{
                     margin-right: 0;
@@ -88,21 +94,48 @@
 
         .button {
            
-            margin: 0 auto;
+            margin: 0 auto 15px;
             display: flex;
             padding: 8px 16px;
             border: solid 1px #231f20;
             border-radius: 8px;
             font-weight: 600;
             font-size: 16px;
+            transition: 0.3s;
+
+            &:hover {
+                background: #fff;
+            }
         }
 
         .read-more {
             text-align: center;
-            padding-top: 8px;
             font-weight: 600;
             font-size: 16px;
+            color: #000;
+            &:hover {
+                color: #000;
+            }
         }
+      }
+  }
+
+  &__item {
+      width: 33.33%;
+      padding: 0 15px;
+      margin-bottom: 30px;
+
+      @media (max-width: 1199px) {
+        width: 50%;
+      }
+      @media (max-width: 991px) {
+        width: 33.33%;
+      }
+      @media (max-width: 860px) {
+        width: 50%;
+      }
+      @media (max-width: 570px) {
+        width: 100%;
       }
   }
 }
