-feat: add login

--- a/scss/components/registrform/_registrForm.scss
+++ b/scss/components/registrform/_registrForm.scss
@@ -76,6 +76,7 @@
        background: #231f20;
        padding: 10px 0;
        font-size: 18px;
+       cursor: pointer;
         border: 1px solid transparent;
         transition: 0.3s;
        
